feat: cleaned comments.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "551b2162",
    "metadata": {},
    "outputs": [
@@ -57,19 +57,12 @@
     "# ===============================\n",
     "# USER SETTINGS\n",
     "# ===============================\n",
-    "# 1. Folder containing the FSC22 Audio files (Source)\n",
     "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Audio Wise V1.0\"\n",
-    "\n",
-    "# 2. Path to the FSC22 Metadata CSV\n",
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Metadata V1.0 FSC22.csv\"\n",
-    "\n",
-    "# 3. Your EXISTING output folder (Destination)\n",
     "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
     "\n",
-    "# 4. How many files do you need?\n",
     "TARGET_DEFICIT = 2969\n",
     "\n",
-    "# 5. The Allowed Classes\n",
     "ALLOWED_CLASSES = [\n",
     "    'Rain', 'Thunderstorm', 'WaterDrops', 'Wind', 'Silence', \n",
     "    'TreeFalling', 'Whistling', 'Insect', 'Frog', \n",
@@ -97,7 +90,7 @@
     "    sys.exit(1)\n",
     "\n",
     "# ===============================\n",
-    "# STEP 2: LOAD & FILTER METADATA\n",
+    "# LOAD & FILTER METADATA\n",
     "# ===============================\n",
     "print(\"\\nLoading and filtering metadata...\")\n",
     "try:\n",
@@ -116,7 +109,7 @@
     "    sys.exit(1)\n",
     "\n",
     "# ===============================\n",
-    "# STEP 3: PREPARE FOR COPYING\n",
+    "# PREPARE FOR COPYING\n",
     "# ===============================\n",
     "# Calculate next group_id to avoid conflicts\n",
     "if len(existing_manifest) > 0 and 'group_id' in manifest_columns:\n",
@@ -130,7 +123,7 @@
     "print(f\"Starting group_id from: {next_group_id}\")\n",
     "\n",
     "# ===============================\n",
-    "# STEP 4: COPY FILES\n",
+    "# COPY FILES\n",
     "# ===============================\n",
     "created_count = 0\n",
     "segments_data = []\n",
@@ -203,7 +196,7 @@
     "print(f\"\\n✨ Finished! Copied {created_count} noise files.\")\n",
     "\n",
     "# ===============================\n",
-    "# STEP 5: UPDATE MASTER MANIFEST\n",
+    "# UPDATE MASTER MANIFEST\n",
     "# ===============================\n",
     "if segments_data:\n",
     "    print(\"\\nUpdating master_manifest.csv...\")\n",
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2d637270",
    "metadata": {},
    "outputs": [
@@ -289,7 +282,7 @@
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive2/esc50.csv\"\n",
     "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
     "\n",
-    "TARGET_DEFICIT = 2229 # The goal\n",
+    "TARGET_DEFICIT = 2229 \n",
     "\n",
     "ALLOWED_CLASSES = [\n",
     "    'chirping_birds', 'thunderstorm', 'crow', 'door_wood_knock', 'pouring_water', \n",
@@ -302,7 +295,7 @@
     "]\n",
     "\n",
     "# ===============================\n",
-    "# STEP 1: LOAD MANIFESTS\n",
+    "# LOAD MANIFESTS\n",
     "# ===============================\n",
     "manifest_path = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
     "if not os.path.exists(manifest_path):\n",
@@ -319,7 +312,7 @@
     "    next_group_id = 10000\n",
     "\n",
     "# ===============================\n",
-    "# STEP 2: PREPARE SOURCE LIST\n",
+    "# PREPARE SOURCE LIST\n",
     "# ===============================\n",
     "print(\"Loading metadata...\")\n",
     "meta_df = pd.read_csv(METADATA_PATH)\n",
@@ -331,7 +324,7 @@
     "print(f\"📉 Target needed: {TARGET_DEFICIT}\")\n",
     "\n",
     "# ===============================\n",
-    "# STEP 3: FILL LOOP (COPY -> AUGMENT)\n",
+    "# FILL LOOP (COPY -> AUGMENT)\n",
     "# ===============================\n",
     "created_count = 0\n",
     "segments_data = []\n",
@@ -410,7 +403,7 @@
     "print(f\"\\n✨ DONE! Created {created_count} files ({len(filtered_df)} originals + {created_count - len(filtered_df)} augmented).\")\n",
     "\n",
     "# ===============================\n",
-    "# STEP 4: SAVE MANIFEST\n",
+    "# SAVE MANIFEST\n",
     "# ===============================\n",
     "if segments_data:\n",
     "    print(\"Updating manifest...\")\n",
