feat: added deficit filler using xeno canto dataset for bird calls as Hard negatives.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -413,6 +413,285 @@
     "    combined.to_csv(manifest_path, index=False)\n",
     "    print(\"✅ Manifest updated.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aab6e480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "import sys\n",
+    "\n",
+    "# ===============================\n",
+    "# USER SETTINGS\n",
+    "# ===============================\n",
+    "# 1. Audio Source (Folder with subfolders like 'aldfly', 'ameavo', etc.)\n",
+    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/A-M\" \n",
+    "\n",
+    "# 2. Metadata CSV (train.csv or train_extended.csv from Kaggle)\n",
+    "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/train_extended.csv\"\n",
+    "\n",
+    "# 3. Output (Where your segments live)\n",
+    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
+    "MANIFEST_PATH = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
+    "\n",
+    "# 4. Target\n",
+    "TARGET_DEFICIT = 10432 \n",
+    "SEGMENT_LENGTH = 5.0\n",
+    "TARGET_SR = 16000  # YAMNet Standard\n",
+    "\n",
+    "# 5. Priority List (Hard Negatives)\n",
+    "PRIORITY_SPECIES = [\n",
+    "    \"Bald Eagle\", \"Red-tailed Hawk\", \"Broad-winged Hawk\", \n",
+    "    \"Cooper's Hawk\", \"Sharp-shinned Hawk\", \"Osprey\", \n",
+    "    \"Peregrine Falcon\", \"Merlin\", \"American Kestrel\", \n",
+    "    \"Northern Harrier\", \"Red-shouldered Hawk\", \"Swainson's Hawk\",\n",
+    "    \"Barred Owl\", \"Great Horned Owl\"\n",
+    "]\n",
+    "\n",
+    "# 6. Safety Exclusions\n",
+    "EXCLUDED_SCIENTIFIC = [\"Pithecophaga jefferyi\"]\n",
+    "EXCLUDED_COMMON = [\"Philippine Eagle\"]\n",
+    "\n",
+    "print(\"=\"*70)\n",
+    "print(\"🦅 PROCESSING KAGGLE BIRD DATASET (DEFICIT FILLER)\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 1: CALCULATE NEED\n",
+    "# ===============================\n",
+    "if not os.path.exists(MANIFEST_PATH):\n",
+    "    print(\"❌ No existing manifest found. Please create master_manifest_NoEagle.csv first.\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "existing_manifest = pd.read_csv(MANIFEST_PATH, encoding='utf-8-sig')\n",
+    "existing_manifest.columns = [c.strip() for c in existing_manifest.columns]\n",
+    "manifest_columns = existing_manifest.columns.tolist()\n",
+    "current_count = len(existing_manifest)\n",
+    "files_needed = TARGET_DEFICIT - current_count\n",
+    "\n",
+    "print(f\"\\n📊 Current Status:\")\n",
+    "print(f\"   • Current NoEagle: {current_count}\")\n",
+    "print(f\"   • Target Count:    {TARGET_DEFICIT}\")\n",
+    "print(f\"   • Files Needed:    {files_needed}\")\n",
+    "\n",
+    "if files_needed <= 0:\n",
+    "    print(\"\\n✅ Deficit already filled!\")\n",
+    "    sys.exit(0)\n",
+    "\n",
+    "# Get next group ID\n",
+    "if 'group_id' in existing_manifest.columns:\n",
+    "    try:\n",
+    "        next_group_id = int(existing_manifest['group_id'].max()) + 1\n",
+    "    except:\n",
+    "        next_group_id = 60000\n",
+    "else:\n",
+    "    next_group_id = 60000\n",
+    "\n",
+    "print(f\"   • Starting group_id: {next_group_id}\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 2: LOAD & VALIDATE METADATA\n",
+    "# ===============================\n",
+    "print(\"\\n📋 Loading metadata...\")\n",
+    "\n",
+    "if not os.path.exists(METADATA_PATH):\n",
+    "    print(f\"❌ Metadata file not found: {METADATA_PATH}\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "try:\n",
+    "    meta_df = pd.read_csv(METADATA_PATH, encoding='utf-8-sig')\n",
+    "    meta_df.columns = [c.strip() for c in meta_df.columns]\n",
+    "    \n",
+    "    # Detect column names\n",
+    "    col_common = None\n",
+    "    col_sci = None\n",
+    "    col_file = None\n",
+    "    \n",
+    "    for col in meta_df.columns:\n",
+    "        col_lower = col.lower()\n",
+    "        if 'common' in col_lower and 'name' in col_lower: col_common = col\n",
+    "        elif 'scientific' in col_lower or 'species' in col_lower: col_sci = col\n",
+    "        elif 'filename' in col_lower or 'file' in col_lower: col_file = col\n",
+    "    \n",
+    "    if not col_file:\n",
+    "        print(f\"❌ Could not find filename column in metadata.\")\n",
+    "        sys.exit(1)\n",
+    "    \n",
+    "    if not col_common: col_common = 'species' \n",
+    "    \n",
+    "    # Exclude Philippine Eagle\n",
+    "    if col_sci and col_sci in meta_df.columns:\n",
+    "        meta_df = meta_df[~meta_df[col_sci].isin(EXCLUDED_SCIENTIFIC)].copy()\n",
+    "    \n",
+    "    if col_common in meta_df.columns:\n",
+    "        meta_df = meta_df[\n",
+    "            ~meta_df[col_common].astype(str).str.lower().str.contains('philippine eagle', na=False)\n",
+    "        ].copy()\n",
+    "    \n",
+    "    # Mark priority species\n",
+    "    if col_common in meta_df.columns:\n",
+    "        meta_df['is_priority'] = meta_df[col_common].apply(\n",
+    "            lambda x: any(p.lower() in str(x).lower() for p in PRIORITY_SPECIES)\n",
+    "        )\n",
+    "    else:\n",
+    "        meta_df['is_priority'] = False\n",
+    "    \n",
+    "    # Sort: priority first\n",
+    "    meta_df = meta_df.sort_values(by=['is_priority'], ascending=False)\n",
+    "    \n",
+    "    print(f\"   • Total candidate files: {len(meta_df)}\")\n",
+    "    print(f\"   • Priority raptors: {meta_df['is_priority'].sum()}\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error reading metadata: {e}\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 3: INDEX AUDIO FILES\n",
+    "# ===============================\n",
+    "print(f\"\\n🔍 Indexing audio files in subfolders...\")\n",
+    "file_map = {}\n",
+    "for root, dirs, files in os.walk(NOISE_SOURCE_FOLDER):\n",
+    "    for f in files:\n",
+    "        if f.endswith('.mp3') or f.endswith('.wav') or f.endswith('.ogg'):\n",
+    "            file_map[f] = os.path.join(root, f)\n",
+    "\n",
+    "print(f\"   ✅ Indexed {len(file_map)} audio files.\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 4: PROCESS AUDIO\n",
+    "# ===============================\n",
+    "segments_data = []\n",
+    "created_count = 0\n",
+    "error_count = 0\n",
+    "skipped_count = 0\n",
+    "\n",
+    "print(f\"\\n🎵 Processing audio files (resampling to {TARGET_SR}Hz)...\")\n",
+    "pbar = tqdm(total=files_needed, desc=\"Creating segments\")\n",
+    "\n",
+    "for index, row in meta_df.iterrows():\n",
+    "    if created_count >= files_needed:\n",
+    "        break\n",
+    "    \n",
+    "    filename_csv = str(row[col_file]).strip()\n",
+    "    \n",
+    "    # Handle extensions\n",
+    "    candidates = [filename_csv]\n",
+    "    if not (filename_csv.endswith('.mp3') or filename_csv.endswith('.wav')):\n",
+    "        candidates = [filename_csv + '.mp3', filename_csv + '.wav']\n",
+    "        \n",
+    "    # Find file\n",
+    "    source_path = None\n",
+    "    real_filename = None\n",
+    "    \n",
+    "    for cand in candidates:\n",
+    "        if cand in file_map:\n",
+    "            source_path = file_map[cand]\n",
+    "            real_filename = cand\n",
+    "            break\n",
+    "            \n",
+    "    if not source_path:\n",
+    "        skipped_count += 1\n",
+    "        continue\n",
+    "    \n",
+    "    common_name = str(row.get(col_common, 'Unknown'))\n",
+    "    is_raptor = row.get('is_priority', False)\n",
+    "    \n",
+    "    try:\n",
+    "        # Load & Resample\n",
+    "        y, sr = librosa.load(source_path, sr=TARGET_SR, mono=True)\n",
+    "        duration = len(y) / sr\n",
+    "        num_chunks = int(duration // SEGMENT_LENGTH)\n",
+    "        \n",
+    "        if num_chunks < 1:\n",
+    "            skipped_count += 1\n",
+    "            continue\n",
+    "        \n",
+    "        for i in range(num_chunks):\n",
+    "            if created_count >= files_needed: break\n",
+    "            \n",
+    "            start_sample = int(i * SEGMENT_LENGTH * sr)\n",
+    "            end_sample = int((i + 1) * SEGMENT_LENGTH * sr)\n",
+    "            \n",
+    "            if end_sample > len(y): break\n",
+    "            \n",
+    "            chunk = y[start_sample:end_sample]\n",
+    "            \n",
+    "            loc_id = \"ConfusingRaptors\" if is_raptor else \"GeneralBirds\"\n",
+    "            label = \"NoEagleSound\"\n",
+    "            \n",
+    "            save_folder = os.path.join(EXISTING_OUTPUT_FOLDER, loc_id, label)\n",
+    "            os.makedirs(save_folder, exist_ok=True)\n",
+    "            \n",
+    "            safe_common = \"\".join([c for c in common_name if c.isalnum() or c in (' ', '_')]).strip().replace(' ', '_')\n",
+    "            safe_fname = os.path.splitext(real_filename)[0]\n",
+    "            new_filename = f\"Kaggle_{safe_common}_{safe_fname}_seg{i:02d}.wav\"\n",
+    "            \n",
+    "            save_path = os.path.join(save_folder, new_filename)\n",
+    "            sf.write(save_path, chunk, TARGET_SR)\n",
+    "            \n",
+    "            # Add to Data\n",
+    "            new_row = {col: '' for col in manifest_columns}\n",
+    "            new_row.update({\n",
+    "                'label': label, 'label_full': label,\n",
+    "                'location_id': loc_id, 'segment_filename': new_filename,\n",
+    "                'output_folder': os.path.join(loc_id, label),\n",
+    "                'source_audio': real_filename,\n",
+    "                'start': 0.0, 'end': SEGMENT_LENGTH,\n",
+    "                'segment_start_time': 0.0, 'segment_end_time': SEGMENT_LENGTH,\n",
+    "                'segment_duration': SEGMENT_LENGTH,\n",
+    "                'group_id': next_group_id,\n",
+    "                'quality': 'High',\n",
+    "                'label_category': 'NoEagleSound'\n",
+    "            })\n",
+    "            \n",
+    "            segments_data.append(new_row)\n",
+    "            created_count += 1\n",
+    "            pbar.update(1)\n",
+    "            \n",
+    "        next_group_id += 1\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        error_count += 1\n",
+    "        continue\n",
+    "\n",
+    "pbar.close()\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 5: SAVE MANIFEST\n",
+    "# ===============================\n",
+    "if segments_data:\n",
+    "    print(f\"\\n💾 Updating manifest...\")\n",
+    "    new_df = pd.DataFrame(segments_data)\n",
+    "    new_df = new_df[manifest_columns]\n",
+    "    \n",
+    "    combined = pd.concat([existing_manifest, new_df], ignore_index=True)\n",
+    "    combined.to_csv(MANIFEST_PATH, index=False)\n",
+    "    \n",
+    "    raptor_count = sum(1 for s in segments_data if 'ConfusingRaptors' in s['location_id'])\n",
+    "    general_count = sum(1 for s in segments_data if 'GeneralBirds' in s['location_id'])\n",
+    "    \n",
+    "    print(f\"\\n✅ SUCCESS!\")\n",
+    "    print(f\"   • Added: {len(new_df)} files\")\n",
+    "    print(f\"   • Raptors: {raptor_count}\")\n",
+    "    print(f\"   • General Birds: {general_count}\")\n",
+    "    print(f\"   • Total in Manifest: {len(combined)}\")\n",
+    "else:\n",
+    "    print(\"\\n⚠️ No files added.\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"🎉 Processing Complete!\")\n",
+    "print(\"=\"*70)"
+   ]
   }
  ],
  "metadata": {
