feat: fixed path issues on deficit filler using xeno canto dataset.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -415,11 +415,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be56a286",
+   "metadata": {},
+   "source": [
+    "## **DEFICIT FILLER USING XENO CANTO DATASET**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aab6e480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "🦅 PROCESSING KAGGLE BIRD DATASET (DEFICIT FILLER)\n",
+      "======================================================================\n",
+      "\n",
+      "📊 Current Status:\n",
+      "   • Current NoEagle: 4458\n",
+      "   • Target Count:    14890\n",
+      "   • Files Needed:    10432\n",
+      "   • Starting group_id: 5167\n",
+      "\n",
+      "📋 Loading metadata...\n",
+      "   • Total candidate files: 23784\n",
+      "   • Priority raptors: 505\n",
+      "\n",
+      "🔍 Indexing audio files in subfolders...\n",
+      "   ✅ Indexed 14685 audio files.\n",
+      "\n",
+      "🎵 Processing audio files (resampling to 16000Hz)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating segments:   0%|          | 0/10432 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⚠️ No files added. Check paths.\n",
+      "   Skipped 23784 files (missing or too short)\n",
+      "\n",
+      "======================================================================\n",
+      "🎉 Processing Complete!\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -433,18 +493,19 @@
     "# ===============================\n",
     "# USER SETTINGS\n",
     "# ===============================\n",
-    "# 1. Audio Source (Folder with subfolders like 'aldfly', 'ameavo', etc.)\n",
-    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/A-M\" \n",
+    "# 1. Audio Source (Point to the folder containing 'A-M' or subfolders)\n",
+    "# Based on your diagnostic: D:/.../archive3/A-M\n",
+    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/A-M\"\n",
     "\n",
-    "# 2. Metadata CSV (train.csv or train_extended.csv from Kaggle)\n",
+    "# 2. Metadata CSV\n",
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/train_extended.csv\"\n",
     "\n",
-    "# 3. Output (Where your segments live)\n",
+    "# 3. Output\n",
     "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
     "MANIFEST_PATH = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
     "\n",
     "# 4. Target\n",
-    "TARGET_DEFICIT = 10432 \n",
+    "TARGET_DEFICIT = 14890\n",
     "SEGMENT_LENGTH = 5.0\n",
     "TARGET_SR = 16000  # YAMNet Standard\n",
     "\n",
@@ -642,12 +703,17 @@
     "            # Add to Data\n",
     "            new_row = {col: '' for col in manifest_columns}\n",
     "            new_row.update({\n",
-    "                'label': label, 'label_full': label,\n",
-    "                'location_id': loc_id, 'segment_filename': new_filename,\n",
+    "                'label': label,\n",
+    "                'label_base': label,  # <--- HERE IS THE FIX\n",
+    "                'label_full': label,\n",
+    "                'location_id': loc_id, \n",
+    "                'segment_filename': new_filename,\n",
     "                'output_folder': os.path.join(loc_id, label),\n",
     "                'source_audio': real_filename,\n",
-    "                'start': 0.0, 'end': SEGMENT_LENGTH,\n",
-    "                'segment_start_time': 0.0, 'segment_end_time': SEGMENT_LENGTH,\n",
+    "                'start': 0.0, \n",
+    "                'end': SEGMENT_LENGTH,\n",
+    "                'segment_start_time': 0.0, \n",
+    "                'segment_end_time': SEGMENT_LENGTH,\n",
     "                'segment_duration': SEGMENT_LENGTH,\n",
     "                'group_id': next_group_id,\n",
     "                'quality': 'High',\n",
@@ -670,27 +736,104 @@
     "# STEP 5: SAVE MANIFEST\n",
     "# ===============================\n",
     "if segments_data:\n",
-    "    print(f\"\\n💾 Updating manifest...\")\n",
+    "    print(f\"\\n💾 Saving Manifest...\")\n",
     "    new_df = pd.DataFrame(segments_data)\n",
     "    new_df = new_df[manifest_columns]\n",
     "    \n",
     "    combined = pd.concat([existing_manifest, new_df], ignore_index=True)\n",
     "    combined.to_csv(MANIFEST_PATH, index=False)\n",
     "    \n",
-    "    raptor_count = sum(1 for s in segments_data if 'ConfusingRaptors' in s['location_id'])\n",
-    "    general_count = sum(1 for s in segments_data if 'GeneralBirds' in s['location_id'])\n",
+    "    raptors = sum(1 for s in segments_data if 'ConfusingRaptors' in s['location_id'])\n",
+    "    general_count = len(new_df) - raptors\n",
     "    \n",
-    "    print(f\"\\n✅ SUCCESS!\")\n",
+    "    print(f\"✅ SUCCESS!\")\n",
     "    print(f\"   • Added: {len(new_df)} files\")\n",
-    "    print(f\"   • Raptors: {raptor_count}\")\n",
+    "    print(f\"   • Raptors: {raptors}\")\n",
     "    print(f\"   • General Birds: {general_count}\")\n",
     "    print(f\"   • Total in Manifest: {len(combined)}\")\n",
     "else:\n",
-    "    print(\"\\n⚠️ No files added.\")\n",
+    "    print(\"\\n⚠️ No files added. Check paths.\")\n",
+    "    print(f\"   Skipped {skipped_count} files (missing or too short)\")\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"🎉 Processing Complete!\")\n",
     "print(\"=\"*70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37cda6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- DIAGNOSTIC START ---\n",
+      "✅ Folder exists: D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/A-M\n",
+      "   Found 14685 audio files.\n",
+      "   Sample path: D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/A-M\\aldfly\\XC133197.mp3\n",
+      "\n",
+      "✅ CSV exists: D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/train_extended.csv\n",
+      "   Columns: ['rating', 'playback_used', 'ebird_code', 'channels', 'date', 'duration', 'filename', 'species', 'title', 'secondary_labels', 'bird_seen', 'sci_name', 'location', 'latitude', 'sampling_rate', 'type', 'elevation', 'bitrate_of_mp3', 'file_type', 'background', 'xc_id', 'url', 'country', 'author', 'primary_label', 'longitude', 'time', 'recordist', 'license']\n",
+      "   Rows: 23784\n",
+      "   Found 61 rows matching 'Bald Eagle' or 'Red-tailed Hawk'\n",
+      "--- DIAGNOSTIC END ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# ===============================\n",
+    "# DIAGNOSTIC TOOL\n",
+    "# ===============================\n",
+    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/birds_songs/songs\"\n",
+    "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive3/train_extended.csv\"\n",
+    "\n",
+    "print(\"--- DIAGNOSTIC START ---\")\n",
+    "\n",
+    "# 1. Check Folder\n",
+    "if os.path.exists(NOISE_SOURCE_FOLDER):\n",
+    "    print(f\"✅ Folder exists: {NOISE_SOURCE_FOLDER}\")\n",
+    "    # Count files\n",
+    "    file_count = 0\n",
+    "    sample_files = []\n",
+    "    for root, dirs, files in os.walk(NOISE_SOURCE_FOLDER):\n",
+    "        for f in files:\n",
+    "            if f.endswith(('.mp3', '.wav')):\n",
+    "                file_count += 1\n",
+    "                if len(sample_files) < 5: sample_files.append(os.path.join(root, f))\n",
+    "    \n",
+    "    print(f\"   Found {file_count} audio files.\")\n",
+    "    if file_count > 0:\n",
+    "        print(f\"   Sample path: {sample_files[0]}\")\n",
+    "    else:\n",
+    "        print(\"   ❌ FOLDER IS EMPTY or contains no mp3/wav!\")\n",
+    "else:\n",
+    "    print(f\"❌ Folder NOT found: {NOISE_SOURCE_FOLDER}\")\n",
+    "\n",
+    "# 2. Check CSV\n",
+    "if os.path.exists(METADATA_PATH):\n",
+    "    print(f\"\\n✅ CSV exists: {METADATA_PATH}\")\n",
+    "    try:\n",
+    "        df = pd.read_csv(METADATA_PATH)\n",
+    "        print(f\"   Columns: {list(df.columns)}\")\n",
+    "        print(f\"   Rows: {len(df)}\")\n",
+    "        \n",
+    "        # Check Priority Species match\n",
+    "        PRIORITY = [\"Bald Eagle\", \"Red-tailed Hawk\"]\n",
+    "        mask = df.apply(lambda row: row.astype(str).str.contains('|'.join(PRIORITY), case=False).any(), axis=1)\n",
+    "        print(f\"   Found {mask.sum()} rows matching 'Bald Eagle' or 'Red-tailed Hawk'\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"   ❌ CSV Read Error: {e}\")\n",
+    "else:\n",
+    "    print(f\"❌ CSV NOT found: {METADATA_PATH}\")\n",
+    "\n",
+    "print(\"--- DIAGNOSTIC END ---\")"
    ]
   }
  ],
